* update egl-wayland to 2:1.1.9+r3+g582b2d3-1

--- a/egl-wayland/PKGBUILD
+++ b/egl-wayland/PKGBUILD
@@ -2,9 +2,9 @@
 # Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
 
 pkgname=egl-wayland
-pkgver=1.1.7
+pkgver=1.1.9+r3+g582b2d3
 pkgrel=1
-epoch=1
+epoch=2
 pkgdesc="EGLStream-based Wayland external platform"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url=https://github.com/NVIDIA/egl-wayland
@@ -12,7 +12,7 @@ license=(MIT)
 depends=(wayland eglexternalplatform)
 makedepends=(meson git wayland-protocols 'libglvnd>=1.3.4')
 provides=(libnvidia-egl-wayland.so)
-_commit=db7f6d80aa4221d51088b0b70a730ce95ca42d6c  # tags/1.1.7
+_commit=582b2d345abaa0e313cf16c902e602084ea59551  # master
 source=("git+$url#commit=$_commit"
         10_nvidia_wayland.json)
 sha256sums=('SKIP'
@@ -20,7 +20,7 @@ sha256sums=('SKIP'
 
 pkgver() {
   cd $pkgname
-  git describe --tags | sed 's/-/+/g'
+  git describe --tags | sed 's/[^-]*-g/r&/;s/-/+/g'
 }
 
 prepare() {
