* update rust to 1:1.57.0-1

--- a/rust/PKGBUILD
+++ b/rust/PKGBUILD
@@ -7,14 +7,14 @@
 
 pkgname=('rust' 'rust-docs')
 epoch=1
-pkgver=1.56.1
+pkgver=1.57.0
 pkgrel=1
 
 _llvm_ver=13.0.0
 
 pkgdesc='Systems programming language focused on safety, speed and concurrency'
 url='https://www.rust-lang.org/'
-arch=(powerpc) #64le powerpc)
+arch=(powerpc64le powerpc)
 license=('MIT' 'Apache')
 
 makedepends=("llvm=$_llvm_ver" 'libffi' 'perl' 'python'
@@ -30,23 +30,17 @@ source=(
   "https://github.com/llvm/llvm-project/releases/download/llvmorg-$_llvm_ver/compiler-rt-$_llvm_ver.src.tar.xz"{,.sig}
   0001-bootstrap-Change-libexec-dir.patch
   0001-cargo-Change-libexec-dir.patch
-  0001-Fix-LLVM-build.patch
-  0006-test-use-extern-for-plugins-Don-t-assume-multilib.patch
-  0007-test-sysroot-crates-are-unstable-Fix-test-when-rpath.patch
-  0009-Link-stage2-tools-dynamically-to-libstd.patch
-  0016-do-not-copy-libunwind.patch
+  0002-compiler-Change-LLVM-targets.patch
+  0003-compiler-Use-wasm-ld-for-wasm-targets.patch
 )
-sha256sums=('c3898dfaadaa193dc88ddbc5345946a163211b58621df1cfff70186b4fc79511'
+sha256sums=('3546f9c3b91b1f8b8efd26c94d6b50312c08210397b4072ed2748e2bd4445c1a'
             'SKIP'
             '4c3602d76c7868a96b30c36165c4b7643e2a20173fced7e071b4baeb2d74db3f'
             'SKIP'
-            '35c9cd0d2a220c020f949c231d296bf4a1641ad253485e2f64440a6dc7731082'
-            '1833c3b5f8262b598115d13f08e2dcba792536768a2371869870e26244971112'
-            '08616f9acea0967af8fda6eed66854fb47fb618969dea139a5fc52017da43da0'
-            '37dd40c028f4f3f79f8ecc7357023f2cf555ad6cfbd9a55c9f1ef61589144acd'
-            '95ca814677947e87344b0890fd0d323f8dba567fa390219b92debdca71f14ff2'
-            '0883036789d8f8523de8896f9eed5c50d714c67ccbefddb46de0a80be76f3c39'
-            'c2394b6ee55374fce587ec03c3ffc5bd684aa67194b1bed4c34a162245b535f4')
+            'a2a8a7c6a5732f79cc92f81d3c8380589c4e2b9a996fb565bbefe42f66b62597'
+            '0f8cfbe0387dd62909fe9cb9523223ae1c2319494e2caf5fa4d0592198631b3e'
+            '977da945985dce4484ace8794cbc91241b1f3c27311c1a8b201231db6e1d19e5'
+            'fcf3c4442ba6a9e59415652ce8514428b2e37b80c5fe7d07fb44259ad37abafb')
 validpgpkeys=('108F66205EAEB0AAA8DD5E1C85AB96E6FA1BE5FE'  # Rust Language (Tag and Release Signing Key) <rust-key@rust-lang.org>
               '474E22316ABF4785A88C6E8EA2C794A986419D8A'  # Tom Stellard <tstellar@redhat.com>
               'B6C8F98282B944E3B0D5C2530FC3042E345AD05D') # Hans Wennborg <hans@chromium.org>
@@ -56,14 +50,14 @@ prepare() {
 
   # Patch bootstrap and cargo so credential helpers
   # are in /usr/lib instead of /usr/libexec
-  patch -Np1 -i ../0001-bootstrap-Change-libexec-dir.patch
   patch -d src/tools/cargo -Np1 < ../0001-cargo-Change-libexec-dir.patch
+  patch -Np1 -i ../0001-bootstrap-Change-libexec-dir.patch
 
-  patch -Np1 -i ../0001-Fix-LLVM-build.patch
-  patch -Np1 -i ../0006-test-use-extern-for-plugins-Don-t-assume-multilib.patch
-  patch -Np1 -i ../0007-test-sysroot-crates-are-unstable-Fix-test-when-rpath.patch
-  patch -Np1 -i ../0009-Link-stage2-tools-dynamically-to-libstd.patch
-  patch -Np1 -i ../0016-do-not-copy-libunwind.patch
+  # Use our *-pc-linux-gnu targets, making LTO with clang simpler
+  patch -Np1 -i ../0002-compiler-Change-LLVM-targets.patch
+
+  # Use our wasm-ld
+  patch -Np1 -i ../0003-compiler-Use-wasm-ld-for-wasm-targets.patch
 
   BOOTSTRAP_PATH="/usr/bin"
   case "${CARCH}" in
