* fix syntax problem

--- a/js78/PKGBUILD
+++ b/js78/PKGBUILD
@@ -12,7 +12,7 @@ depends=(gcc-libs readline zlib sh)
 makedepends=(zip autoconf2.13 python-setuptools python-psutil rust)
 makedepends_powerpc=(llvm clang ldd)
 makedepends_powerpc64le=(llvm clang ldd)
-makedepends_x86_64=(llvm clang ldd
+makedepends_x86_64=(llvm clang ldd)
 checkdepends=(mercurial git)
 _relver=${pkgver}esr
 _whissi_patches_ver=78esr-patches-19
