* update filesystem to 2021.12.07-1

--- a/filesystem/PKGBUILD
+++ b/filesystem/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Tom Gundersen <teg@jklm.no>
 
 pkgname=filesystem
-pkgver=2021.05.31
+pkgver=2021.12.07
 pkgrel=1
 pkgdesc='Base Arch Linux files'
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -30,7 +30,7 @@ sha256sums=('e03bede3d258d680548696623d5979c6edf03272e801a813c81ba5a5c64f4f82'
             'dad04a370e488aa85fb0a813a5c83cf6fd981ce01883fc59685447b092de84b5'
             '8ca2d8eef6fb5143c9ef7e9174ccfef59ac7ad2deee243574cd10c763156cc10'
             'e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855'
-            '39d2f719f095028fa655c246bc8608cf3b00971cb7d8c3dbae5a6d89b93a6ca7'
+            'c8ee7a9faf798caab178ec51afae4146f1efd8a716b7acedf28345b6c75f9697'
             'c0b6858a129b1416fa70ba32127ca0039531054b89ad04e7e74cb43d29b9ab67'
             '5e06477834f51abf42ea4e8dc199632afc6afbfd8c44354685a271e9a48d2c0a'
             '5e4088ad8d0853d390fa303f6be8c3f69c33834200cba9e90f7849f1993ca8d0'
@@ -40,7 +40,7 @@ sha256sums=('e03bede3d258d680548696623d5979c6edf03272e801a813c81ba5a5c64f4f82'
             'c390b31fffc4a2b5d78ae8c89f5317aadef1f71baac09cfb467b675db1406d61'
             '89e43a0b7028f52d5c8e7fb961d962c4b4f4e9595880a6157274ddb2c7c0b6b4'
             'b5b28f395583d141d88c0b955cd05124f9b8cdf003feab01e55885b8e8c1303e'
-            '618ac097441c1f2daffc9967e5c3cd18ea8866f776db62d04bf401c53907b1c9'
+            'f17efd1c6480c5db1fdab4a0e3cfcd4baa44a3e1ae1210aebeb40f8d5c82f742'
             '450a4fd61a58af97329241ef2e199a68ab07ea2937c73c968469afc52fd9bc8d'
             '889c92e34d11d2dada952adb1c364a48b7fdfcdc381cfff865ff96a348d19e80'
             '51da5fdeaa2b56c1730e7a2abb46b956500368f6f563bf38a5979be8d9d28d33'
@@ -63,7 +63,7 @@ package() {
 
   # setup /etc and /usr/share/factory/etc
   install -d etc/{ld.so.conf.d,skel,profile.d} usr/share/factory/etc
-  for f in fstab group host.conf hosts issue ld.so.conf motd nsswitch.conf \
+  for f in fstab group host.conf hosts issue ld.so.conf nsswitch.conf \
   passwd resolv.conf securetty shells profile; do
     install -m644 "$srcdir"/$f etc/
     install -m644 "$srcdir"/$f usr/share/factory/etc/
