--- a/pahole/PKGBUILD
+++ b/pahole/PKGBUILD
@@ -2,26 +2,26 @@
 # Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
 
 pkgname=pahole
-pkgver=1.21
+pkgver=1.23
 pkgrel=1
 pkgdesc="Pahole and other DWARF utils"
 url="https://git.kernel.org/pub/scm/devel/pahole/pahole.git"
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL2)
 depends=(libelf python)
-#makedepends=(git cmake ninja)
+makedepends=(git cmake ninja)
 provides=(libdwarves{,_emit,_reorganize}.so)
-_commit=25ad41e7b52e3ad677ad4c016698e71079403b3f  # tags/v1.21^0
+_commit=c2b7b8c20877d267159ace36119f6340b9d12823  # tags/v1.23^0
 source=("git+https://git.kernel.org/pub/scm/devel/pahole/pahole.git#commit=$_commit"
         "git+https://github.com/libbpf/libbpf"
         python.diff)
 sha256sums=('SKIP'
             'SKIP'
-            'defaea9ad325a73bb27bd029065604c084dd32f132b5eaa431718533e94dc073')
+            '8f73631f14ca665204bf5be36c5082eb4f89884dda5e5ae2dd66c990b9c11d51')
 
 pkgver() {
   cd pahole
-  git describe --tags | sed 's/^v//;s/-/+/g'
+  git describe --tags | sed 's/^v//;s/[^-]*-g/r&/;s/-/+/g'
 }
 
 prepare() {
@@ -36,7 +36,6 @@ prepare() {
 }
 
 build() {
-  CFLAGS+=" $CPPFLAGS"
   cmake -S pahole -B build -G Ninja \
     -DCMAKE_INSTALL_PREFIX=/usr \
     -DCMAKE_BUILD_TYPE=None \
@@ -47,7 +46,6 @@ build() {
 package() {
   DESTDIR="$pkgdir" cmake --install build
 
-  export PYTHONHASHSEED=0
   python -m compileall -d / "$pkgdir"
   python -O -m compileall -d / "$pkgdir"
 }
