--- a/gtk3/PKGBUILD
+++ b/gtk3/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgbase=gtk3
 pkgname=(gtk3 gtk3-docs gtk3-demos)
-pkgver=3.24.30+90+g20be04f7ac
+pkgver=3.24.31
 pkgrel=1
 epoch=1
 pkgdesc="GObject-based multi-platform GUI toolkit"
@@ -14,12 +14,12 @@ depends=(atk cairo libxcursor libxinerama libxrandr libxi libepoxy gdk-pixbuf2
          dconf libxcomposite libxdamage pango shared-mime-info at-spi2-atk
          wayland libxkbcommon adwaita-icon-theme json-glib librsvg
          desktop-file-utils mesa cantarell-fonts libcolord rest libcups
-         libcanberra fribidi iso-codes libcloudproviders tracker3)
-#         gtk-update-icon-cache)
+         libcanberra fribidi iso-codes libcloudproviders tracker3
+         gtk-update-icon-cache)
 makedepends=(gobject-introspection gtk-doc git glib2-docs sassc meson
              wayland-protocols)
 license=(LGPL)
-_commit=20be04f7ac4a2081ce34768397873b7551e17c69  # gtk-3-24
+_commit=ab45bde94c7bbd140b12fa0dd6203f7b98d1a715  # tags/3.24.31^0
 source=("git+https://gitlab.gnome.org/GNOME/gtk.git#commit=$_commit"
         gtk-query-immodules-3.0.hook)
 sha256sums=('SKIP'
@@ -27,7 +27,7 @@ sha256sums=('SKIP'
 
 pkgver() {
   cd gtk
-  git describe --tags | sed 's/-/+/g'
+  git describe --tags | sed 's/[^-]*-g/r&/;s/-/+/g'
 }
 
 prepare() {
