* disable seccomp support on powerpc

--- a/systemd/PKGBUILD
+++ b/systemd/PKGBUILD
@@ -8,18 +8,19 @@ pkgname=('systemd' 'systemd-libs' 'systemd-resolvconf' 'systemd-sysvcompat')
 _tag='95d0353dad616c275fda9b123ba9660e16b20d0a' # git rev-parse v${_tag_name}
 _tag_name=250.2
 pkgver="${_tag_name/-/}"
-pkgrel=1
+pkgrel=1.1
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.github.com/systemd/systemd'
 makedepends=('acl' 'cryptsetup' 'docbook-xsl' 'gperf' 'lz4' 'xz' 'pam' 'libelf'
              'intltool' 'iptables' 'kmod' 'libcap' 'libidn2' 'libgcrypt'
              'libmicrohttpd' 'libxcrypt' 'libxslt' 'util-linux' 'linux-api-headers'
              'python-jinja' 'python-lxml' 'quota-tools' 'shadow' 'git'
-             'meson' 'libseccomp' 'pcre2' 'audit' 'libxkbcommon'
+             'meson' 'pcre2' 'audit' 'libxkbcommon'
              'bash-completion' 'p11-kit' 'systemd' 'libfido2' 'rsync')
 makedepends_powerpc=('kexec-tools')
-makedepends_powerpc64le=('kexec-tools')
-makedepends_x86_64=('gnu-efi-libs' 'tpm2-tss' 'kexec-tools')
+makedepends_powerpc64le=('kexec-tools' 'libseccomp')
+makedepends_riscv64=('libseccomp')
+makedepends_x86_64=('gnu-efi-libs' 'tpm2-tss' 'kexec-tools' 'libseccomp')
 options=('strip')
 validpgpkeys=('63CDA1E5D3FC22B998D20DD6327F26951A015CC4'  # Lennart Poettering <lennart@poettering.net>
               'A9EA9081724FFAE0484C35A1A81CEA22BC8C7E2E'  # Luca Boccassi <luca.boccassi@gmail.com>
@@ -178,9 +179,11 @@ package_systemd() {
   depends=('acl' 'libacl.so' 'bash' 'cryptsetup' 'libcryptsetup.so' 'dbus'
            'iptables' 'kbd' 'kmod' 'libkmod.so' 'hwids' 'libcap' 'libcap.so'
            'libgcrypt' 'libxcrypt' 'libcrypt.so' 'systemd-libs' 'libidn2' 'lz4' 'pam'
-           'libelf' 'libseccomp' 'libseccomp.so' 'util-linux' 'libblkid.so'
+           'libelf' 'util-linux' 'libblkid.so'
            'libmount.so' 'xz' 'pcre2' 'audit' 'libaudit.so' 'libp11-kit'
            'libp11-kit.so' 'openssl')
+  depends_powerpc64le=('libseccomp' 'libseccomp.so')
+  depends_riscv64=('libseccomp' 'libseccomp.so')
   depends_x86_64=('tpm2-tss')
   provides=('nss-myhostname' "systemd-tools=$pkgver" "udev=$pkgver")
   replaces=('nss-myhostname' 'systemd-tools' 'udev')
