* disable seccomp by meson as well

--- a/systemd/PKGBUILD
+++ b/systemd/PKGBUILD
@@ -10,6 +10,7 @@ _tag_name=250.2
 pkgver="${_tag_name/-/}"
 pkgrel=1.1
 arch=(x86_64 powerpc64le powerpc riscv64)
+arch=(powerpc)
 url='https://www.github.com/systemd/systemd'
 makedepends=('acl' 'cryptsetup' 'docbook-xsl' 'gperf' 'lz4' 'xz' 'pam' 'libelf'
              'intltool' 'iptables' 'kmod' 'libcap' 'libidn2' 'libgcrypt'
@@ -154,6 +155,7 @@ build() {
       _meson_options+=(
         -Dgnu-efi=false
         -Dtests=false
+        -Dseccomp=false
       )
       ;;
     powerpc64le|riscv64)
