* update firefox to 96.0-1

--- a/firefox/PKGBUILD
+++ b/firefox/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Jakub Schmidtke <sjakub@gmail.com>
 
 pkgname=firefox
-pkgver=94.0.2
+pkgver=96.0
 pkgrel=1
 pkgdesc="Standalone web browser from mozilla.org"
 arch=(x86_64 powerpc64le)
@@ -97,6 +97,7 @@ ac_add_options --enable-hardening
 ac_add_options --enable-optimize="${CXXFLAGS} -fpermissive"
 ac_add_options --enable-jemalloc
 ac_add_options --enable-linker=bfd
+ac_add_optioms 	--without-wasm-sandboxed-libraries
 export LDFLAGS="${LDFLAGS} -Wl,-rpath=/usr/lib/firefox"
 mk_add_options MOZ_MAKE_FLAGS="${MAKEFLAGS}"
 
@@ -250,3 +251,25 @@ END
 }
 
 # vim:set sw=2 et:
+sha256sums=('b4b03214ad838fe2744fed26c497c8a6fa7aedc95f47d4146da1cf5cc97860c0'
+            'SKIP'
+            'a9e5264257041c0b968425b5c97436ba48e8d294e1a0f02c59c35461ea245c33'
+            'a9b8b4a0a1f4a7b4af77d5fc70c2686d624038909263c795ecc81e0aec7711e9'
+            'ad83c0c6195ab742848941be1d9c8f32c1d4a8bc019d8887b42256bafaefb541'
+            '0df637d44218524e213814d15d623f27724d8e405390173f6cc385e145110bfe'
+            '958cf5016e9845b6ee6e2ed05ad96cc2fc6f74bebbb338a7b7ce29bffd2be716'
+            'cc24b6b95ff11ebf3bb29e0270f357169c7fff00c2a6f33e6c2b701096e7da9e'
+            '944fc690a0b344ea56ff2b0880ba492ba80338a68f31d0fb205b891a5de42cee'
+            '3ebba6c6c59dbf754b522d2535c27eae3e724aab575b8e7be9658e0d33183bcf'
+            '6b18cb5ec5ae16881637a979c4e2696d4e036583093a08d0528e2e10c6d5a8e9')
+sha256sums=('b4b03214ad838fe2744fed26c497c8a6fa7aedc95f47d4146da1cf5cc97860c0'
+            'SKIP'
+            'a9e5264257041c0b968425b5c97436ba48e8d294e1a0f02c59c35461ea245c33'
+            'a9b8b4a0a1f4a7b4af77d5fc70c2686d624038909263c795ecc81e0aec7711e9'
+            'ad83c0c6195ab742848941be1d9c8f32c1d4a8bc019d8887b42256bafaefb541'
+            '0df637d44218524e213814d15d623f27724d8e405390173f6cc385e145110bfe'
+            '958cf5016e9845b6ee6e2ed05ad96cc2fc6f74bebbb338a7b7ce29bffd2be716'
+            'cc24b6b95ff11ebf3bb29e0270f357169c7fff00c2a6f33e6c2b701096e7da9e'
+            '944fc690a0b344ea56ff2b0880ba492ba80338a68f31d0fb205b891a5de42cee'
+            '3ebba6c6c59dbf754b522d2535c27eae3e724aab575b8e7be9658e0d33183bcf'
+            '58f09287af2dd1dc2907a0dde68cc04d39f1eab448094322c3ffef6ba7878009')
