--- a/glslang/PKGBUILD
+++ b/glslang/PKGBUILD
@@ -1,22 +1,22 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer: Sven-Hendrik Haase <svenstaro@gmail.com>
+# Maintainer: Sven-Hendrik Haase <svenstaro@archlinux.org>
 
 # Careful when upgrading this package! It usually breaks ABI without bumping soname.
 pkgname=glslang
-pkgver=11.7.0
-pkgrel=1
+pkgver=11.7.1
+pkgrel=3
 pkgdesc='OpenGL and OpenGL ES shader front end and validator'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://github.com/KhronosGroup/glslang'
 license=('BSD')
-depends=('gcc-libs' 'python')
-makedepends=('cmake' 'ninja' 'git')
+depends=('gcc-libs')
+makedepends=('cmake' 'ninja' 'git' 'python')
 options=('staticlibs')
 # Get the commits from known_good.json for every release
 source=(${pkgname}-${pkgver}.tar.gz::https://github.com/KhronosGroup/glslang/archive/${pkgver}.tar.gz
         git+https://github.com/KhronosGroup/SPIRV-Tools#commit=1fbed83c8aab8517d821fcb4164c08567951938f
         git+https://github.com/KhronosGroup/SPIRV-Headers#commit=449bc986ba6f4c5e10e32828783f9daef2a77644)
-sha256sums=('b6c83864c3606678d11675114fa5f358c519fe1dad9a781802bcc87fb8fa32d5'
+sha256sums=('ab2e2ddc507bb418b9227cbe6f443eb06e89e2387944f42026d82c0b4ef79b0a'
             'SKIP'
             'SKIP')
 
@@ -31,6 +31,7 @@ prepare() {
 
 build() {
   cd ${pkgname}-${pkgver}
+  export CXXFLAGS+=" -ffat-lto-objects"
   cmake \
     -Bbuild-shared \
     -GNinja \
