* update vulkan-icd-loader to 1.2.202-1

--- a/vulkan-icd-loader/PKGBUILD
+++ b/vulkan-icd-loader/PKGBUILD
@@ -2,27 +2,18 @@
 # Maintainer: Laurent Carlier <lordheavym@gmail.com>
 
 pkgname=vulkan-icd-loader
-pkgver=1.2.195
+pkgver=1.2.202
 pkgrel=1
 arch=(x86_64 powerpc64le powerpc riscv64)
 pkgdesc="Vulkan Installable Client Driver (ICD) Loader"
 url="https://www.khronos.org/vulkan/"
 license=('custom')
-makedepends=('cmake' 'python-lxml' 'libx11' 'libxrandr' 'wayland' 'vulkan-headers' 'git')
+makedepends=('cmake' 'python-lxml' 'libx11' 'libxrandr' 'wayland' 'vulkan-headers')
 depends=(glibc)
 optdepends=('vulkan-driver: packaged vulkan driver') # vulkan-driver: vulkan-intel/vulkan-radeon/nvidia-utils/....
 provides=('libvulkan.so')
-source=("${pkgname}-${pkgver}.tar.gz::https://github.com/KhronosGroup/Vulkan-Loader/archive/v${pkgver}.tar.gz"
-	vulkan-loader-700-revert.patch)
-sha256sums=('4cc64cb2a9d7ee78132c4d4cfb66ac1be0651eac4364245d48af5ba8b7cbf282'
-            '1e7e0e8e4276004b37b3680066bcc73fef6ca087a2f3b02236de0fc7b1f1dfd9')
-
-prepare() {
-  cd "${srcdir}"/Vulkan-Loader*
-  # if git is found assumes to check for .git/HEAD and
-  # fails cmake. of course, screw this.
-  patch -Np1 -i ${srcdir}/vulkan-loader-700-revert.patch
-}
+source=("${pkgname}-${pkgver}.tar.gz::https://github.com/KhronosGroup/Vulkan-Loader/archive/v${pkgver}.tar.gz")
+sha256sums=('8fe23f6f9cc46176565d73e2d1746ff222dec4562f208310d489ce37e9beaf90')
 
 build() {
   cd "${srcdir}"/Vulkan-Loader*
