--- a/mesa/PKGBUILD
+++ b/mesa/PKGBUILD
@@ -7,23 +7,19 @@
 pkgbase=mesa
 pkgname=('vulkan-mesa-layers' 'opencl-mesa' 'vulkan-radeon' 'vulkan-swrast' 'libva-mesa-driver' 'mesa-vdpau' 'mesa')
 pkgdesc="An open-source implementation of the OpenGL specification"
-pkgver=21.2.5
+pkgver=21.3.4
 pkgrel=1
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 makedepends=('python-mako' 'libxml2' 'libx11' 'xorgproto' 'libdrm' 'libxshmfence' 'libxxf86vm'
              'libxdamage' 'libvdpau' 'libva' 'wayland' 'wayland-protocols' 'zstd' 'elfutils' 'llvm'
              'libomxil-bellagio' 'libclc' 'clang' 'libglvnd' 'libunwind' 'lm_sensors' 'libxrandr'
-             'valgrind' 'glslang' 'vulkan-icd-loader' 'cmake' 'meson')
+             'valgrind' 'glslang' 'vulkan-icd-loader' 'directx-headers' 'cmake' 'meson')
 url="https://www.mesa3d.org/"
 license=('custom')
 source=(https://mesa.freedesktop.org/archive/mesa-${pkgver}.tar.xz{,.sig}
-	swr-llvm13-patch1.patch
-	swr-llvm13-patch2.patch
-	LICENSE)
-sha512sums=('aaa1ebaa1e18eea76c3784c9a65942c3e417c1079d7bf75dcede574999dc459fb4d68d041cf2f767afb9cbfa834a985e0a4edd5a56b0fc90f8fdc506359aa5da'
+        LICENSE)
+sha512sums=('7aeea3dba0d39f4ac9f23c54aa0e6853d48000f50c4dd484618c28debe705cdd765ae8fafb5ddea0773976f7189849d9128be3f2282fea74394b59019cb786b9'
             'SKIP'
-            '073ea2bb4778b3151717b26e0ec737abb4916ea340c7193a7382c2e2197534e93e95622d530e2f731ae156fd6ca1fc86f315f6ecae0baaeab88846773fb98bba'
-            'b59f18f4bc69b872e97b5f33a53b9c2398143bc1d0a1b42787ca2a0c204fc11b2837ca40f6f773a0b1bd49756754f9d755ac14d4eb10df6269570477ba8484fc'
             'f9f0d0ccf166fe6cb684478b6f1e1ab1f2850431c06aa041738563eb1808a004e52cdec823c103c9e180f03ffc083e95974d291353f0220fe52ae6d4897fecc7')
 validpgpkeys=('8703B6700E7EE06D7A39B8D6EDAE37B02CEB490D'  # Emil Velikov <emil.l.velikov@gmail.com>
               '946D09B5E4C9845E63075FF1D961C596A7203456'  # Andres Gomez <tanty@igalia.com>
@@ -32,25 +28,17 @@ validpgpkeys=('8703B6700E7EE06D7A39B8D6EDAE37B02CEB490D'  # Emil Velikov <emil.l
               '71C4B75620BC75708B4BDB254C95FAAB3EB073EC'  # Dylan Baker <dylan@pnwbakers.com>
               '57551DE15B968F6341C248F68D8E31AFC32428A6') # Eric Engestrom <eric@engestrom.ch>
 
-prepare() {
-  cd mesa-$pkgver
-  # https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/11568
-  patch -Np1 -i ../swr-llvm13-patch1.patch
-  # https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/13267
-  patch -Np1 -i ../swr-llvm13-patch2.patch
-}
-
 build() {
   case "${CARCH}" in
     powerpc64le) EXTRA_MESON_FLAGS="-D power8=true" ;;
   esac
-      
+
   arch-meson mesa-$pkgver build \
     -D b_lto=true \
     -D b_ndebug=true \
     -D platforms=x11,wayland \
-    -D dri-drivers=r100,r200,nouveau \
     -D gallium-drivers=r300,r600,radeonsi,nouveau,virgl,swrast,zink \
+    -D dri-drivers=r100,r200,nouveau \
     -D vulkan-drivers=amd,swrast \
     -D vulkan-layers=device-select,overlay \
     -D dri3=enabled \
@@ -75,7 +63,6 @@ build() {
     -D shared-glapi=enabled \
     -D microsoft-clc=disabled \
     -D valgrind=enabled ${EXTRA_MESON_FLAGS}
-    
 
   # Print config
   meson configure build
@@ -186,7 +173,7 @@ package_mesa() {
   _install fakeinstall/usr/share/drirc.d/00-mesa-defaults.conf
   _install fakeinstall/usr/share/glvnd/egl_vendor.d/50_mesa.json
 
-  # ati-dri, nouveau-dri, swrast
+  # ati-dri, nouveau-dri, intel-dri, svga-dri, swrast, swr
   _install fakeinstall/usr/lib/dri/*_dri.so
 
   _install fakeinstall/usr/lib/bellagio
@@ -194,9 +181,6 @@ package_mesa() {
   _install fakeinstall/usr/lib/lib{gbm,glapi}.so*
   _install fakeinstall/usr/lib/libOSMesa.so*
   _install fakeinstall/usr/lib/libxatracker.so*
-
-  # in vulkan-headers
-  #rm -rvf fakeinstall/usr/include/vulkan
 
   _install fakeinstall/usr/include
   _install fakeinstall/usr/lib/pkgconfig
@@ -213,4 +197,3 @@ package_mesa() {
 
   install -m644 -Dt "${pkgdir}/usr/share/licenses/${pkgname}" LICENSE
 }
-
