--- a/xorg/xorg-server/PKGBUILD
+++ b/xorg/xorg-server/PKGBUILD
@@ -5,51 +5,27 @@
 pkgbase=xorg-server
 pkgname=('xorg-server' 'xorg-server-xephyr' 'xorg-server-xvfb' 'xorg-server-xnest'
          'xorg-server-common' 'xorg-server-devel')
-pkgver=1.20.13
-pkgrel=2.1
+pkgver=21.1.3
+pkgrel=1
 arch=(x86_64 powerpc64le powerpc riscv64)
-arch=(riscv64)
 license=('custom')
 groups=('xorg')
 url="https://xorg.freedesktop.org"
 makedepends=('xorgproto' 'pixman' 'libx11' 'mesa' 'mesa-libgl' 'xtrans'
-             'libxkbfile' 'libxfont2' 'libpciaccess' 'libxv'
+             'libxkbfile' 'libxfont2' 'libpciaccess' 'libxv' 'libxcvt'
              'libxmu' 'libxrender' 'libxi' 'libxaw' 'libxtst' 'libxres'
              'xorg-xkbcomp' 'xorg-util-macros' 'xorg-font-util' 'libepoxy'
              'xcb-util' 'xcb-util-image' 'xcb-util-renderutil' 'xcb-util-wm' 'xcb-util-keysyms'
-             'libxshmfence' 'libunwind' 'systemd' 'meson' 'git'
-             'wayland-protocols' 'egl-wayland')
+             'libxshmfence' 'libunwind' 'systemd' 'meson' 'git')
+#source=(${pkgbase}-${pkgver}::git+https://gitlab.freedesktop.org/xorg/xserver.git#commit=27a0ee32ccef8d621aaa758c804fc9a5ceeb5a56
 source=(https://xorg.freedesktop.org/releases/individual/xserver/${pkgbase}-${pkgver}.tar.xz{,.sig}
-        xserver-autobind-hotplug.patch
-        0001-v2-FS-58644.patch
-        0002-fix-libshadow-2.patch
         xvfb-run # with updates from FC master
         xvfb-run.1)
-validpgpkeys=('7B27A3F1A6E18CD9588B4AE8310180050905E40C'
-              'C383B778255613DFDB409D91DB221A6900000011'
-              'DD38563A8A8224537D1F90E45B8A2D50A0ECD0D3'
-              '3BB639E56F861FA2E86505690FDD682D974CA72A')
-sha512sums=('4e0b7bd4e070dc52cb2c51c2056feb133de2c0487d359392ed63abba9702910cd2e2983e9415973d8d6e9672eac78be6f39202687fc56610877914ce722554b3'
+validpgpkeys=('FD0004A26EADFE43A4C3F249C6F7AE200374452D') # Povilas Kanapickas <povilas@radix.lt>
+sha512sums=('cf5fed023eadda62ae732f8c4d427c272ebe005188341290f3d03147042c103b00cbb94d86a0256da815fb9b9a3da315c21a05ee0c926c1a2ff0c54ab0c0638b'
             'SKIP'
-            'd84f4d63a502b7af76ea49944d1b21e2030dfd250ac1e82878935cf631973310ac9ba1f0dfedf10980ec6c7431d61b7daa4b7bbaae9ee477b2c19812c1661a22'
-            '74e1aa0c101e42f0f25349d305641873b3a79ab3b9bb2d4ed68ba8e392b4db2701fcbc35826531ee2667d3ee55673e4b4fecc2a9f088141af29ceb400f72f363'
-            '3d3be34ad9fa976daec53573d3a30a9f1953341ba5ee27099af0141f0ef7994fa5cf84dc08aae848380e6abfc10879f9a67f07601c7a437abf8aef13a3ec9fe1'
             '4154dd55702b98083b26077bf70c60aa957b4795dbf831bcc4c78b3cb44efe214f0cf8e3c140729c829b5f24e7466a24615ab8dbcce0ac6ebee3229531091514'
             'de5e2cb3c6825e6cf1f07ca0d52423e17f34d70ec7935e9dd24be5fb9883bf1e03b50ff584931bd3b41095c510ab2aa44d2573fd5feaebdcb59363b65607ff22')
-
-prepare() {
-  cd "${pkgbase}-${pkgver}"
-
-  # patch from Fedora, not yet merged
-  patch -Np1 -i ../xserver-autobind-hotplug.patch
-
-  # Fix rootless xorg - FS#58644
-  # https://bugs.freedesktop.org/show_bug.cgi?id=106588
-  patch -Np1 -i ../0001-v2-FS-58644.patch
-
-  # Fix libshadow.so: libfb.so => not found - merge in master
-  patch -Np1 -i ../0002-fix-libshadow-2.patch
-}
 
 build() {
   # Since pacman 5.0.2-2, hardened flags are now enabled in makepkg.conf
@@ -60,17 +36,15 @@ build() {
   export LDFLAGS=${LDFLAGS/,-z,now}
 
   arch-meson ${pkgbase}-$pkgver build \
-    -D os_vendor="Arch POWER" \
     -D ipv6=true \
     -D xvfb=true \
     -D xnest=true \
     -D xcsecurity=true \
     -D xorg=true \
     -D xephyr=true \
-    -D xwayland=true \
-    -D xwayland_eglstream=true \
     -D glamor=true \
     -D udev=true \
+    -D dtrace=false \
     -D systemd_logind=true \
     -D suid_wrapper=true \
     -D xkb_dir=/usr/share/X11/xkb \
@@ -112,22 +86,20 @@ package_xorg-server() {
   pkgdesc="Xorg X server"
   depends=(libepoxy libxfont2 pixman xorg-server-common libunwind
            dbus libgl xf86-input-libinput nettle
-           libpciaccess libdrm libxshmfence) # FS#52949
-
+           libpciaccess libdrm libxshmfence libxcvt) # FS#52949
   # see xorg-server-*/hw/xfree86/common/xf86Module.h for ABI versions - we provide major numbers that drivers can depend on
   # and /usr/lib/pkgconfig/xorg-server.pc in xorg-server-devel pkg
-  provides=('X-ABI-VIDEODRV_VERSION=24.0' 'X-ABI-XINPUT_VERSION=24.1' 'X-ABI-EXTENSION_VERSION=10.0' 'x-server')
+  provides=('X-ABI-VIDEODRV_VERSION=25.2' 'X-ABI-XINPUT_VERSION=24.4' 'X-ABI-EXTENSION_VERSION=10.0' 'x-server')
   conflicts=('nvidia-utils<=331.20' 'glamor-egl' 'xf86-video-modesetting')
   replaces=('glamor-egl' 'xf86-video-modesetting')
   install=xorg-server.install
 
-  _install fakeinstall/usr/bin/{Xorg,cvt,gtf}
-  ln -s /usr/bin/Xorg "${pkgdir}/usr/bin/X"
+  _install fakeinstall/usr/bin/{X,Xorg,gtf}
   _install fakeinstall/usr/lib/Xorg{,.wrap}
   _install fakeinstall/usr/lib/xorg/modules/*
   _install fakeinstall/usr/share/X11/xorg.conf.d/10-quirks.conf
-  _install fakeinstall/usr/share/man/man1/{Xorg,Xorg.wrap,cvt,gtf}.1
-  _install fakeinstall/usr/share/man/man4/{exa,fbdevhw,modesetting}.4
+  _install fakeinstall/usr/share/man/man1/{Xorg,Xorg.wrap,gtf}.1
+  _install fakeinstall/usr/share/man/man4/{exa,fbdevhw,inputtestdrv,modesetting}.4
   _install fakeinstall/usr/share/man/man5/{Xwrapper.config,xorg.conf,xorg.conf.d}.5
 
   # distro specific files must be installed in /usr/share/X11/xorg.conf.d
@@ -153,7 +125,7 @@ package_xorg-server-xephyr() {
 package_xorg-server-xvfb() {
   pkgdesc="Virtual framebuffer X server"
   depends=(libxfont2 libunwind pixman xorg-server-common xorg-xauth 
-           libgl nettle libtirpc)
+           libgl nettle libtirpc systemd-libs)
 
   _install fakeinstall/usr/bin/Xvfb
   _install fakeinstall/usr/share/man/man1/Xvfb.1
@@ -167,7 +139,7 @@ package_xorg-server-xvfb() {
 
 package_xorg-server-xnest() {
   pkgdesc="A nested X server that runs as an X application"
-  depends=(libxfont2 libxext pixman xorg-server-common nettle libtirpc)
+  depends=(libxfont2 libxext pixman xorg-server-common nettle libtirpc systemd-libs)
 
   _install fakeinstall/usr/bin/Xnest
   _install fakeinstall/usr/share/man/man1/Xnest.1
@@ -190,6 +162,5 @@ package_xorg-server-devel() {
   install -m644 -Dt "${pkgdir}/usr/share/licenses/${pkgname}" "${pkgbase}-${pkgver}"/COPYING
 
   # make sure there are no files left to install
-  rm fakeinstall/usr/bin/Xwayland
   find fakeinstall -depth -print0 | xargs -0 rmdir
 }
