--- a/xorg/xorg-xwayland/PKGBUILD
+++ b/xorg/xorg-xwayland/PKGBUILD
@@ -2,15 +2,15 @@
 # Maintainer: AndyRTR <andyrtr@archlinux.org>
 
 pkgname=xorg-xwayland
-pkgver=21.1.2
+pkgver=21.1.4
 pkgrel=1
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('custom')
 groups=('xorg')
 url="https://xorg.freedesktop.org"
 pkgdesc="run X clients under wayland"
 depends=('nettle' 'libepoxy' 'systemd-libs' 'libxfont2' 
-         'pixman' 'xorg-server-common')
+         'pixman' 'xorg-server-common' 'libxcvt')
 makedepends=('meson' 'xorgproto' 'xtrans' 'libxkbfile' 'dbus'
              'xorg-font-util'
              'wayland' 'wayland-protocols'
@@ -19,12 +19,13 @@ makedepends=('meson' 'xorgproto' 'xtrans' 'libxkbfile' 'dbus'
              'egl-wayland'
 )
 source=(https://xorg.freedesktop.org/archive/individual/xserver/xwayland-$pkgver.tar.xz{,.sig})
-sha512sums=('3bd595a563cbc44b49a00c85adabdbcddf02fd55c6500ed2711557c156f10cd273af93f7b232865141ad27392a85583e40268bcedad183ad9eeefba457cef6c6'
+sha512sums=('54e18565b4c2514534501ddcc76058d6911cf0c2185cddf5c54833d317f51ba8eb8934bd9be269518ece05f3bc8cda81600b25871c61437c923eba916eccc525'
             'SKIP')
 provides=('xorg-server-xwayland')
 conflicts=('xorg-server-xwayland')
 replaces=('xorg-server-xwayland')
-validpgpkeys=('B09FAF35BE914521980951145A81AF8E6ADBB200') # "Michel Daenzer <michel@daenzer.net>"
+#validpgpkeys=('B09FAF35BE914521980951145A81AF8E6ADBB200') # "Michel Daenzer <michel@daenzer.net>"
+validpgpkeys=('67DC86F2623FC5FD4BB5225D14706DBE1E4B4540') # "Olivier Fourdan <fourdan@xfce.org>"
 
 build() {
   arch-meson xwayland-$pkgver build \
