--- a/ocaml/ocaml-integers/PKGBUILD
+++ b/ocaml/ocaml-integers/PKGBUILD
@@ -2,16 +2,16 @@
 # Maintainer: Jürgen Hötzel <juergen@archlinux.org>
 
 pkgname=ocaml-integers
-pkgver=0.4.0
-pkgrel=4.1
+pkgver=0.5.1
+pkgrel=1
 pkgdesc='Library for binding to C libraries using pure OCaml'
-arch=(i686 x86_64 powerpc64le powerpc riscv64)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url=https://github.com/ocamllabs/ocaml-integers
 license=('custom')
 options=('!strip')
 makedepends=('dune' 'ocaml-topkg' 'ocaml-findlib' 'ocaml-compiler-libs>=4.12.0' 'ocamlbuild' 'opam')
 source=("$pkgname-$pkgver.tar.gz::https://github.com/ocamllabs/$pkgname/archive/$pkgver.tar.gz")
-sha256sums=('ba6e087606c622533ecca9dc4c0917a3cc183e73e3e7d8511b68e21183ef913f')
+sha256sums=('f608ce98caf41ddb4eea90e8673bb8ff35acb07ef951bc0bf75b5989ef9b36b8')
 
 
 build() {
