--- a/llvm/PKGBUILD
+++ b/llvm/PKGBUILD
@@ -4,16 +4,16 @@
 
 pkgname=('llvm' 'llvm-libs' 'llvm-ocaml')
 pkgver=13.0.0
-pkgrel=3
-_ocaml_ver=4.12.0
-arch=(x86_64 powerpc64le powerpc)
+pkgrel=6
+_ocaml_ver=4.13.1
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://llvm.org/"
 license=('custom:Apache 2.0 with LLVM Exception')
 makedepends=('cmake' 'ninja' 'libffi' 'libedit' 'ncurses' 'libxml2'
              "ocaml>=$_ocaml_ver" 'ocaml-ctypes' 'ocaml-findlib'
              'python-setuptools' 'python-psutil' 'python-sphinx'
              'python-recommonmark')
-options=('staticlibs')
+options=('staticlibs' '!lto') # Getting thousands of test failures with LTO
 _source_base=https://github.com/llvm/llvm-project/releases/download/llvmorg-$pkgver
 source=($_source_base/$pkgname-$pkgver.src.tar.xz{,.sig}
         don-t-accept-nullptr-as-GEP-element-type.patch
@@ -66,10 +66,6 @@ build() {
 }
 
 check() {
-  case "${CARCH}" in
-    powerpc) return 0 ;;
-  esac
-
   cd "$srcdir/llvm-$pkgver.src/build"
   ninja check
 }
@@ -130,7 +126,7 @@ package_llvm-libs() {
 
 package_llvm-ocaml() {
   pkgdesc="OCaml bindings for LLVM"
-  depends=('llvm' "ocaml=$_ocaml_ver" 'ocaml-ctypes')
+  depends=('llvm' "ocaml>=$_ocaml_ver" 'ocaml-ctypes')
 
   install -d "$pkgdir"/{usr/lib,usr/share/doc/$pkgname}
   cp -a "$srcdir/ocaml.lib" "$pkgdir/usr/lib/ocaml"
