* update clang to 13.0.0-4

--- a/clang/PKGBUILD
+++ b/clang/PKGBUILD
@@ -4,13 +4,14 @@
 
 pkgname=clang
 pkgver=13.0.0
-pkgrel=2
+pkgrel=4
 pkgdesc="C language family frontend for LLVM"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://clang.llvm.org/"
 license=('custom:Apache 2.0 with LLVM Exception')
 depends=('llvm-libs' 'gcc')
 depends_powerpc64le=('compiler-rt')
+depends_riscv64=('compiler-rt')
 depends_x86_64=('compiler-rt')
 makedepends=('llvm' 'cmake' 'ninja' 'python-sphinx')
 optdepends=('openmp: OpenMP support in clang with -fopenmp'
