--- a/arcticfox/PKGBUILD
+++ b/arcticfox/PKGBUILD
@@ -1,20 +1,20 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 pkgname=arcticfox
-pkgver=27.12.0
+pkgver=39.0
 pkgrel=1
-pkgdesc='A fork of Palemoon'
-arch=(x86_64 powerpc)
+pkgdesc='A fork of Palemoon with TenFourFox enhancements'
+arch=(powerpc)
 license=(MPL2)
 url='https://github.com/wicknix/Arctic-Fox'
 depends=(gtk2 libxcb libxt pulseaudio alsa-lib)
-makedepends=(zip unzip autoconf2.13 python2 xorgproto gcc6 python2-psutil python2-setuptools)
+makedepends=(zip unzip autoconf2.13 python2 xorgproto python2-psutil python2-setuptools)
 provides=('browser')
-commit='315800f0dd546fa4830f1567f6b175ed1f5d4c00'
+commit='6a16b782dcf4b6a70791db447476e46843114bf6'
 source=("git+https://github.com/wicknix/Arctic-Fox.git#commit=${commit}"
         mozconfig
         powerpc-disable-malloc-static-sizes.patch)
 sha256sums=('SKIP'
-            '65688f1177d9392c8cbe3a1261dc518693e6d36e55de0532989e13aae9965b05'
+            '7b6941025b6305cf5ec6e937c8f2ca3f368e712b81a0d1807f20772403fe9733'
             '91e85670d39c9b58bb0deae45906b86c0fffdc6b440fa1602e3d334cccb6323a')
 
 prepare() {
