--- a/boost/PKGBUILD
+++ b/boost/PKGBUILD
@@ -11,7 +11,7 @@
 # Contributor: Luca Roccia <little_rock@users.sourceforge.net>
 
 pkgname=('boost' 'boost-libs')
-pkgver=1.76.0
+pkgver=1.78.0
 pkgrel=1
 _srcname=boost_${pkgver//./_}
 pkgdesc="Free peer-reviewed portable C++ source libraries"
@@ -20,12 +20,17 @@ url="https://www.boost.org/"
 license=('custom')
 makedepends=('icu' 'python' 'python-numpy' 'bzip2' 'zlib' 'openmpi' 'zstd')
 source=(https://boostorg.jfrog.io/artifactory/main/release/$pkgver/source/$_srcname.tar.gz
+        $pkgname-b2-fix-lib-install.patch::https://github.com/bfgroup/b2/commit/78fd284a42ca.patch
         $pkgname-ublas-c++20-iterator.patch::https://github.com/boostorg/ublas/commit/a31e5cffa85f.patch)
-sha256sums=('7bd7ddceec1a1dfdcbdb3e609b60d01739c38390a5f956385a12f3122049f0ca'
+sha256sums=('94ced8b72956591c4775ae2207a9763d3600b30d9d7446562c552f0a14a63be7'
+            'd233b16920ad7da8bb6e02bf5fb4e429592057b4f4db28d4babf3850e837a8db'
             'aa38addb40d5f44b4a8472029b475e7e6aef1c460509eb7d8edf03491dc1b5ee')
 
 prepare() {
   cd $_srcname
+
+  # https://github.com/bfgroup/b2/issues/104
+  patch -Np1 -d tools/build <../$pkgname-b2-fix-lib-install.patch
 
   # https://github.com/boostorg/ublas/pull/97
   patch -Np2 -i ../$pkgname-ublas-c++20-iterator.patch
@@ -35,9 +40,9 @@ build() {
   local JOBS="$(sed 's/.*\(-j *[0-9]\+\).*/\1/' <<<$MAKEFLAGS)"
 
   pushd $_srcname/tools/build
-  #./bootstrap.sh --cxxflags="$CXXFLAGS $LDFLAGS"
-  #./b2 install --prefix="$srcdir"/fakeinstall
-  ln -sf b2 "$srcdir"/fakeinstall/bin/bjam
+  ./bootstrap.sh --cxxflags="$CXXFLAGS $LDFLAGS"
+  ./b2 install --prefix="$srcdir"/fakeinstall
+  ln -s b2 "$srcdir"/fakeinstall/bin/bjam
   popd
 
   cd $_srcname
@@ -58,9 +63,9 @@ build() {
     runtime-link=shared \
     link=shared,static \
     toolset=gcc \
-    python=3.9 \
-    cflags="$CPPFLAGS $CFLAGS -fPIC -O3" \
-    cxxflags="$CPPFLAGS $CXXFLAGS -fPIC -O3" \
+    python=3.10 \
+    cflags="$CPPFLAGS $CFLAGS -fPIC -O3 -ffat-lto-objects" \
+    cxxflags="$CPPFLAGS $CXXFLAGS -fPIC -O3 -ffat-lto-objects" \
     linkflags="$LDFLAGS" \
     --layout=system \
     $JOBS \
@@ -93,9 +98,9 @@ package_boost-libs() {
     libboost_json.so libboost_locale.so libboost_log.so libboost_log_setup.so
     libboost_math_c99.so libboost_math_c99f.so libboost_math_c99l.so
     libboost_math_tr1.so libboost_math_tr1f.so libboost_math_tr1l.so
-    libboost_mpi.so libboost_numpy39.so
+    libboost_mpi.so libboost_numpy310.so
     libboost_prg_exec_monitor.so libboost_program_options.so
-    libboost_python39.so libboost_random.so
+    libboost_python310.so libboost_random.so
     libboost_regex.so libboost_serialization.so
     libboost_stacktrace_addr2line.so libboost_stacktrace_basic.so
     libboost_stacktrace_noop.so libboost_system.so libboost_thread.so
@@ -106,15 +111,15 @@ package_boost-libs() {
   cp -a fakeinstall/lib/*.so* "$pkgdir"/usr/lib/
 
   # https://github.com/boostorg/mpi/issues/112
-  install -d "$pkgdir"/usr/lib/python3.9/site-packages/boost
-  touch "$pkgdir"/usr/lib/python3.9/site-packages/boost/__init__.py
-  python -m compileall -o 0 -o 1 -o 2 "$pkgdir"/usr/lib/python3.9/site-packages/boost
-  cp fakeinstall/lib/boost-python3.9/mpi.so \
-    "$pkgdir"/usr/lib/python3.9/site-packages/boost/mpi.so
+  install -d "$pkgdir"/usr/lib/python3.10/site-packages/boost
+  touch "$pkgdir"/usr/lib/python3.10/site-packages/boost/__init__.py
+  python -m compileall -o 0 -o 1 -o 2 "$pkgdir"/usr/lib/python3.10/site-packages/boost
+  cp fakeinstall/lib/boost-python3.10/mpi.so \
+    "$pkgdir"/usr/lib/python3.10/site-packages/boost/mpi.so
 
   # https://github.com/boostorg/python/issues/203#issuecomment-391477685
   for _lib in python numpy; do
-    ln -srL "$pkgdir"/usr/lib/libboost_${_lib}3{9,}.so
+    ln -srL "$pkgdir"/usr/lib/libboost_${_lib}3{10,}.so
   done
 
   install -Dm644 -t "$pkgdir/usr/share/licenses/$pkgname" $_srcname/LICENSE_1_0.txt
