* update nodejs to 17.3.0-1

--- a/nodejs/nodejs/PKGBUILD
+++ b/nodejs/nodejs/PKGBUILD
@@ -9,24 +9,18 @@
 # Contributor: TIanyi Cui <tianyicui@gmail.com>
 
 pkgname=nodejs
-pkgver=17.0.1
+pkgver=17.3.0
 pkgrel=1
 pkgdesc='Evented I/O for V8 javascript'
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le riscv64)
 url='https://nodejs.org/'
 license=('MIT')
-depends=('openssl' 'zlib' 'icu' 'libuv' 'libnghttp2' 'c-ares') # 'http-parser' 'v8')
+depends=('brotli' 'openssl' 'zlib' 'icu' 'libuv' 'libnghttp2' 'c-ares') # 'http-parser' 'v8')
 makedepends=('python' 'procps-ng')
 provides=('npm')
 conflicts=('npm')
-source=("https://github.com/nodejs/node/archive/v$pkgver/nodejs-$pkgver.tar.gz"
-        system-c-ares.patch)
-sha512sums=('f0b9b2a05a6040d814603a762dbcad6853abd11ff001534e777abcf78cbcad46b7102e83ca021061567e893ebef3016c5f5099a4c5d607a758730bf07c327c8a'
-            'bca85b5a4622b38f20f3787bdb2784db76cd4b213fadf8a5813a375080e7481c4aff7556712d59df3e19849a7eb6b2f048a69b4e2162cb717ab1b3a791d2558e')
-
-prepare() {
-  patch -d node-$pkgver -Rp1 < system-c-ares.patch
-}
+source=("https://github.com/nodejs/node/archive/v$pkgver/nodejs-$pkgver.tar.gz")
+sha512sums=('fbfc347c0f07df1d575b27f660abda97b65f336577797ba56a8837385ddb5fc6d55bf80c95042ff74ad9f4bd12e5188672b8f307a085287db89e1b9fdaba2567')
 
 build() {
   cd node-$pkgver
@@ -39,7 +33,8 @@ build() {
     --shared-libuv \
     --experimental-http-parser \
     --shared-nghttp2 \
-    --shared-cares
+    --shared-cares \
+    --shared-brotli
     # --shared-v8
     # --shared-http-parser
 
