* update gobject-introspection to 1.70.0-5

--- a/gobject-introspection/PKGBUILD
+++ b/gobject-introspection/PKGBUILD
@@ -5,7 +5,7 @@
 pkgbase=gobject-introspection
 pkgname=(gobject-introspection gobject-introspection-runtime)
 pkgver=1.70.0
-pkgrel=4
+pkgrel=5
 pkgdesc="Introspection system for GObject-based libraries"
 url="https://wiki.gnome.org/Projects/GObjectIntrospection"
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -28,6 +28,9 @@ pkgver() {
 
 prepare() {
   cd $pkgbase
+
+  # Fix build with meson 0.61.0
+  git cherry-pick -n 827494d6415b696a effb1e09dee263cd
 }
   
 build() {
@@ -41,17 +44,28 @@ check() {
   meson test -C build
 }
 
+_pick() {
+  local p="$1" f d; shift
+  for f; do
+    d="$srcdir/$p/${f#$pkgdir/}"
+    mkdir -p "$(dirname "$d")"
+    mv "$f" "$d"
+    rmdir -p --ignore-fail-on-non-empty "$(dirname "$f")"
+  done
+}
+
 package_gobject-introspection() {
   depends+=("gobject-introspection-runtime=$pkgver-$pkgrel")
 
   meson install -C build --destdir "$pkgdir"
 
-  python -m compileall -d /usr/lib/$pkgbase "$pkgdir/usr/lib/$pkgbase"
-  python -O -m compileall -d /usr/lib/$pkgbase "$pkgdir/usr/lib/$pkgbase"
+  cd "$pkgdir"
 
-### Split runtime
-  mkdir -p "$srcdir/runtime/lib"
-  mv "$pkgdir"/usr/lib/{lib*,girepository-*} "$srcdir/runtime/lib"
+  python -m compileall -d /usr/lib/$pkgbase usr/lib/$pkgbase
+  python -O -m compileall -d /usr/lib/$pkgbase usr/lib/$pkgbase
+
+  _pick runtime usr/lib/lib*
+  _pick runtime usr/lib/girepository-*
 }
 
 package_gobject-introspection-runtime() {
@@ -59,5 +73,5 @@ package_gobject-introspection-runtime() {
   depends=(glib2)
   provides+=(libgirepository-1.0.so)
 
-  mv "$srcdir/runtime" "$pkgdir/usr"
+  mv runtime/* "$pkgdir"
 }
