--- a/chafa/PKGBUILD
+++ b/chafa/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=chafa
 pkgver=1.8.0
 pkgrel=1
 pkgdesc="Image-to-text converter supporting a wide range of symbols and palettes, transparency, animations, etc."
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://hpjansson.org/chafa/"
 depends=('imagemagick' 'libxslt')
 makedepends=('gtk-doc')
