* update node-gyp to 8.4.1-1

--- a/nodejs/node-gyp/PKGBUILD
+++ b/nodejs/node-gyp/PKGBUILD
@@ -1,8 +1,9 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
+# Maintainer: Caleb Maclennan <caleb@alerque.com>
 
 pkgname=node-gyp
-pkgver=8.2.0
+pkgver=8.4.1
 pkgrel=1
 pkgdesc='Node.js native addon build tool'
 arch=('any')
@@ -12,7 +13,7 @@ depends=('nodejs' 'nodejs-nopt' 'python' 'semver')
 makedepends=('npm')
 source=(https://registry.npmjs.org/$pkgname/-/$pkgname-$pkgver.tgz)
 noextract=($pkgname-$pkgver.tgz)
-sha512sums=('286f1275ca009f0d9de9aba01b097590e6b200b52b5d6fcfdae3809b6276fa7996fc78d9a3bcbef130e0ecb7a3c5b7a438e4afde4ce1abe3525189080c05fc78')
+sha512sums=('a254c946052d01bfe13971b413ddf0643b3962226581b5f14f0400147c8d951b1742763351a17668682e8d96f0fa147c685e191bfad24f9edb58c583d7a8ebf7')
 
 package() {
   npm install -g --prefix "$pkgdir"/usr "$srcdir"/$pkgname-$pkgver.tgz
