* description for linux-visionfive

--- a/riscv64/linux-visionfive/PKGBUILD
+++ b/riscv64/linux-visionfive/PKGBUILD
@@ -1,8 +1,8 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 pkgbase=linux-visionfive
 pkgver=5.16.arch1
-pkgrel=1
-pkgdesc='Linux'
+pkgrel=1.1
+pkgdesc='Linux kernel for the StarFive VisionFive V1'
 _srctag=v${pkgver%.*}-${pkgver##*.}
 url="https://git.archlinux.org/linux.git/log/?h=$_srctag"
 arch=(any)
