--- a/harfbuzz/PKGBUILD
+++ b/harfbuzz/PKGBUILD
@@ -4,22 +4,22 @@
 
 pkgbase=harfbuzz
 pkgname=(harfbuzz harfbuzz-icu)
-pkgver=3.0.0
+pkgver=3.2.0
 pkgrel=1
 pkgdesc="OpenType text shaping engine"
 url="https://www.freedesktop.org/wiki/Software/HarfBuzz"
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=(MIT)
-makedepends=(glib2 freetype2 graphite icu gobject-introspection gtk-doc
-             ragel git python meson)
+makedepends=(glib2 freetype2 graphite cairo icu gobject-introspection gtk-doc
+             ragel git python meson chafa)
 checkdepends=(python-fonttools python-setuptools)
-_commit=9c387e20d65a7a366ac270d789f6ad266014c9e0  # tags/3.0.0^0
+_commit=be91d2917d9860326cb5fd1d03ffe1042a72f6d3  # tags/3.2.0^0
 source=("git+https://github.com/harfbuzz/harfbuzz#commit=$_commit")
 sha256sums=('SKIP')
 
 pkgver() {
   cd harfbuzz
-  git describe --tags | sed 's/-/+/g'
+  git describe --tags | sed 's/[^-]*-g/r&/;s/-/+/g'
 }
 
 prepare() {
@@ -28,8 +28,7 @@ prepare() {
 
 build() {
   arch-meson harfbuzz build \
-    -D graphite=enabled \
-    -D chafa=disabled
+    -D graphite2=enabled
   meson compile -C build
 }
 
