--- a/iniparser/PKGBUILD
+++ b/iniparser/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=iniparser
 pkgver=4.1
 pkgrel=3
 pkgdesc="A free stand-alone ini file parsing library written in portable ANSI C"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc)
 url="http://ndevilla.free.fr/iniparser/"
 license=('MIT')
 depends=('glibc')
