--- a/texlive-bin/PKGBUILD
+++ b/texlive-bin/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: francois <francois.archlinux.org>
 
 pkgname=('texlive-bin' 'libsynctex')
-pkgver=2021.58686
-pkgrel=3
+pkgver=2021.59745
+pkgrel=1
 license=('GPL')
 arch=(x86_64 powerpc64le powerpc riscv64)
 makedepends=('git' 'cairo' 'pixman' 'graphite' 't1lib' 'gd'
@@ -12,7 +12,7 @@ makedepends=('git' 'cairo' 'pixman' 'graphite' 't1lib' 'gd'
          'icu' 'harfbuzz' 'harfbuzz-icu' 'gmp' 'mpfr' 'potrace' 'libpaper'
          'perl' 'clisp' 'ffcall' 'libxcrypt')
 url='https://tug.org/texlive/'
-_commit=ccb6338507149edf2772bfccb9933b72761f4cc4 # svn://tug.org/texlive/trunk/Build/source@58686
+_commit=7eaec95e244515fe11445111c0aaa1349de6790d # svn://tug.org/texlive/tags/texlive-2021.3/Build/source@59745
 source=("git+https://github.com/Tex-Live/texlive-source.git#commit=${_commit}")
 sha256sums=('SKIP')
 
@@ -26,7 +26,9 @@ prepare() {
 build() {
    cd "$srcdir/texlive-source"
 
+   BIGENDIAN=no
    case "${CARCH}" in
+     powerpc) BIGENDIAN=yes ;;
      riscv64) PLATFORM_CONFIGURE_FLAGS="--disable-mfluajit --disable-luajithbtex --disable-luajittex" ;; 
    esac
 
@@ -37,6 +39,10 @@ build() {
    echo "--> Initial configuration..."
    # we use temporary prefix to avoid messing the existing
    # $pkgdir/usr/share/texmf tree
+   #
+   # Preset float endianness to avoid a crash in cairo configure
+   # with recent toolchains. We are not building cairo anyway.
+   ax_cv_c_float_words_bigendian=${BIGENDIAN} \
    ../configure --prefix=/usr -C \
      --sysconfdir=/etc \
      --datarootdir=/usr/share \
@@ -95,7 +101,7 @@ package_libsynctex() {
 
 package_texlive-bin() {
    pkgdesc="TeX Live binaries"
-   depends=('cairo' 'pixman' 'graphite' 't1lib' 'gd' 'poppler'
+   depends=('cairo' 'pixman' 'graphite' 't1lib' 'gd' 'poppler' 'ffcall'
             'libsigsegv' 'zziplib' 'libpng' 'libjpeg' 'freetype2' 'libxcrypt'
             'icu' 'harfbuzz' 'harfbuzz-icu' 'gmp' 'mpfr' 'potrace' 'libpaper'
             'libsynctex')
