--- a/ruby/ruby/PKGBUILD
+++ b/ruby/ruby/PKGBUILD
@@ -4,17 +4,16 @@
 # Contributor: John Proctor <jproctor@prium.net>
 # Contributor: Jeramy Rutley <jrutley@gmail.com>
 
-pkgname=(ruby) # ruby-docs)
-pkgver=3.0.2
-pkgrel=2
+pkgname=(ruby ruby-docs)
+pkgver=3.0.3
+pkgrel=1
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.ruby-lang.org/en/'
 license=(BSD custom)
-depends=(libxcrypt)
-makedepends=(gdbm openssl libffi libyaml ttf-dejavu tk)
+makedepends=(gdbm openssl libffi doxygen graphviz libyaml ttf-dejavu tk)
 options=(!emptydirs)
 source=(https://cache.ruby-lang.org/pub/ruby/${pkgver:0:3}/ruby-${pkgver}.tar.xz)
-sha512sums=('0f702e2d8ca1342a9d4284dbdd234a3588e057b92566353aa7c21835cf09a3932864b2acf459a976960a1704e9befa562155d36b98b7cda8bd99526e10a374c4')
+sha512sums=('bb9ea426278d5a7ac46595296f03b82d43df8b7db41045cdf85611e05e26c703c53f700494cd7cf5d4c27fa953bdc5c144317d7720812db0a6e3b6f4bc4d2e00')
 
 build() {
   cd ruby-${pkgver}
@@ -40,7 +39,7 @@ check() {
 
 package_ruby() {
   pkgdesc='An object-oriented language for quick and easy programming'
-  depends=(gdbm openssl libffi libyaml gmp zlib rubygems ruby-irb)
+  depends=(gdbm openssl libffi libyaml libxcrypt gmp zlib rubygems ruby-irb)
   optdepends=(
       'ruby-docs: Ruby documentation'
       'tk: for Ruby/TK'
