* update gtest to 1.11.0-3

--- a/gtest/PKGBUILD
+++ b/gtest/PKGBUILD
@@ -9,13 +9,13 @@
 
 pkgname=gtest
 pkgver=1.11.0
-pkgrel=1.1
+pkgrel=3
 pkgdesc='Google Test - C++ testing utility'
 url='https://github.com/google/googletest'
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=('BSD')
 depends=('gcc-libs' 'sh')
-makedepends=('python' 'gcc-libs')
+makedepends=('python' 'cmake' 'gcc-libs' 'sh')
 optdepends=('python: gmock generator')
 conflicts=('gmock')
 replaces=('gmock')
