* update oath-toolkit to 2.6.7-1.1

--- a/oath-toolkit/PKGBUILD
+++ b/oath-toolkit/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=oath-toolkit
 pkgver=2.6.7
-pkgrel=1
+pkgrel=1.1
 pkgdesc='OATH one-time password toolkit'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.nongnu.org/oath-toolkit/'
 license=('GPL3')
 depends=('glibc' 'pam' 'xmlsec')
