--- a/mariadb/PKGBUILD
+++ b/mariadb/PKGBUILD
@@ -6,23 +6,23 @@ pkgbase=mariadb
 pkgname=('mariadb-libs' 'mariadb-clients' 'mariadb' 'mytop')
 pkgdesc='Fast SQL database server, derived from MySQL'
 pkgver=10.6.5
-pkgrel=1
-arch=(x86_64 powerpc64le powerpc)
+pkgrel=2
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL')
 url='https://mariadb.org/'
 makedepends=('boost' 'bzip2' 'cmake' 'jemalloc' 'libaio' 'libxcrypt'
              'libxml2' 'lz4' 'lzo' 'openssl' 'systemd' 'zlib' 'zstd' 'curl'
-             'krb5' 'cracklib')
+             'krb5' 'cracklib' 'judy')
 validpgpkeys=('199369E5404BD5FC7D2FE43BCBCB082A1BB943DB') # MariaDB Package Signing Key <package-signing-key@mariadb.org>
 # The default links with mirror redirection fail for signatures, specific
 # mirrors may be out of date every now and then. Let's use the upstream
 # rsync source via https and hope it does not hurt them too much.
 # https://mariadb.com/kb/en/library/mirror-sites-for-mariadb/
 source=("https://rsync.osuosl.org/pub/mariadb/mariadb-${pkgver}/source/mariadb-${pkgver}.tar.gz"{,.asc}
-	'0001-arch-specific.patch')
+        '0001-arch-specific.patch')
 sha256sums=('e0be040428d9a42a8bb4bd221b567ff2522cd6fa8906386273da4f03c5c20a8f'
             'SKIP'
-	    '3289efb3452d199aec872115f35da3f1d6fd4ce774615076690e9bc8afae1460')
+            '3289efb3452d199aec872115f35da3f1d6fd4ce774615076690e9bc8afae1460')
 
 prepare() {
   cd $pkgbase-$pkgver/
@@ -32,7 +32,6 @@ prepare() {
   #  * force preloading jemalloc for memory management
   #  * make systemd-tmpfiles create MYSQL_DATADIR
   patch -Np1 < ../0001-arch-specific.patch
-
 }
 
 build() {
@@ -93,8 +92,9 @@ build() {
     powerpc|riscv64) _cmake_options+=(-DCMAKE_CXX_FLAGS="-latomic") ;;
   esac
 
-  mkdir -p build
+  mkdir build
   cd build
+
   cmake ../"$pkgbase-$pkgver" "${_cmake_options[@]}"
 
   make
@@ -168,6 +168,7 @@ package_mariadb() {
   optdepends=('cracklib: for cracklib plugin'
               'curl: for ha_s3 plugin'
               'galera: for MariaDB cluster with Galera WSREP'
+              'judy: for Open Query GRAPH (OQGraph) computation engine'
               'python-mysqlclient: for myrocks_hotbackup'
               'perl-dbd-mariadb: for mariadb-hotcopy, mariadb-convert-table-format and mariadb-setpermission')
   conflicts=('mysql')
@@ -229,4 +230,3 @@ package_mytop() {
 
   install -D -m0755 build/scripts/mytop "$pkgdir"/usr/bin/mytop
 }
-
