--- a/libphonenumber/PKGBUILD
+++ b/libphonenumber/PKGBUILD
@@ -2,15 +2,15 @@
 # Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
 
 pkgname=libphonenumber
-pkgver=8.12.33
-pkgrel=1
+pkgver=8.12.39
+pkgrel=3
 pkgdesc="Google's common library for parsing, formatting, and validating international phone numbers"
 url="https://github.com/googlei18n/libphonenumber"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(Apache)
 depends=(icu protobuf boost-libs)
 makedepends=(boost cmake gtest git 'java-environment>=9')
-_commit=49410a16e7f55d6fbbd396fbeb7ea7278ebb2063  # tags/v8.12.33^0
+_commit=b4e9b73792be6c9c5aeb6bc560dd95ab64623d4f  # tags/v8.12.39^0
 source=("git+$url#commit=$_commit")
 sha256sums=('SKIP')
 
