* update samba to 4.15.3-1

--- a/samba/PKGBUILD
+++ b/samba/PKGBUILD
@@ -14,6 +14,7 @@ pkgname=('smbclient' 'samba')
 pkgver=4.15.3
 pkgrel=1
 arch=(x86_64 powerpc64le powerpc riscv64)
+arch=(riscv64)
 url="https://www.samba.org"
 license=('GPL3')
 makedepends=('python' 'python-markdown' 'python-dnspython' 'docbook-xsl' 'pkg-config' 'libbsd' 'db' 'popt' 'libcups'
@@ -86,7 +87,7 @@ build() {
 
 package_smbclient() {
 pkgdesc="Tools to access a server's filespace and printers via SMB"
-depends=('popt' 'cifs-utils' 'tdb' 'ldb'
+depends=('popt' 'tdb' 'ldb'
          'tevent' 'libgcrypt' 'python' 'python-markdown' 'python-dnspython' 'talloc' 'readline' 'gnutls'
          'libbsd' 'libldap' 'libcups' 'libarchive' 'libnsl' 'jansson'
          'libldb.so' 'libtdb.so' 'libtevent.so' 'libreadline.so' 'icu')
