* update libsoup3 to 3.0.4-2

--- a/libsoup3/PKGBUILD
+++ b/libsoup3/PKGBUILD
@@ -3,24 +3,25 @@
 # Contributor: Jan de Groot <jgc@archlinux.org>
 
 pkgname=libsoup3
-pkgver=3.0.2
-pkgrel=1
+pkgver=3.0.4
+pkgrel=2
 pkgdesc="HTTP client/server library for GNOME"
 url="https://wiki.gnome.org/Projects/libsoup"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(LGPL)
-depends=(glib2 glib-networking sqlite krb5 libpsl brotli libnghttp2)
+depends=(glib2 glib-networking sqlite krb5 libpsl brotli libnghttp2
+         libsysprof-capture)
 makedepends=(gobject-introspection python vala git gtk-doc meson samba
              python-quart)
 checkdepends=(apache php-apache)
 optdepends=('samba: Windows Domain SSO')
-_commit=ead1754ddf7a8935cdaf0372afccf7970856b575  # tags/3.0.2^0
+_commit=25a728020c4b53b5db4c4c675070e92f947fbd4d  # tags/3.0.4^0
 source=("git+https://gitlab.gnome.org/GNOME/libsoup.git#commit=$_commit")
 sha256sums=('SKIP')
 
 pkgver() {
   cd libsoup
-  git describe --tags | sed 's/-/+/g'
+  git describe --tags | sed 's/[^-]*-g/r&/;s/-/+/g'
 }
 
 prepare() {
@@ -30,9 +31,7 @@ prepare() {
 build() {
   arch-meson libsoup build \
     -D gtk_doc=true \
-    -D autobahn=disabled \
-    -D sysprof=disabled \
-    -D ntlm=disabled
+    -D autobahn=disabled
   meson compile -C build
 }
 
