* update liburcu to 0.13.0-1

--- a/liburcu/PKGBUILD
+++ b/liburcu/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=liburcu
 pkgver=0.13.0
 pkgrel=1
 pkgdesc="LGPLv2.1 userspace RCU (read-copy-update) library"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://lttng.org/urcu"
 license=('LGPL2.1')
 validpgpkeys=('2A0B4ED915F2D3FA45F5B16217280A9781186ACF')
@@ -18,7 +18,7 @@ sha1sums=('fd2ea98735b7a174ac539b8f4624040cbba9095e'
 
 build() {
     cd "$srcdir"/userspace-rcu-${pkgver}
-    ./configure --prefix=/usr
+    ./configure --prefix=/usr --buil=${CHOST}
     make
 }
 
