* update netcdf to 4.8.1-1

--- a/netcdf/PKGBUILD
+++ b/netcdf/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=netcdf
 pkgver=4.8.1
 pkgrel=1
 pkgdesc="network Common Data Form interface for array-oriented data access and corresponding library"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.unidata.ucar.edu/software/netcdf/"
 depends=(hdf5 curl)
 makedepends=(cmake)
