* update openmp to 13.0.0-1

--- a/openmp/PKGBUILD
+++ b/openmp/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=openmp
 pkgver=13.0.0
 pkgrel=1
 pkgdesc="LLVM OpenMP Runtime Library"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le riscv64)
 url="https://openmp.llvm.org/"
 license=('custom:Apache 2.0 with LLVM Exception')
 depends=('glibc' 'libelf' 'libffi')
