* update hwdata to 0.355-1

--- a/hwdata/PKGBUILD
+++ b/hwdata/PKGBUILD
@@ -6,6 +6,7 @@ pkgrel=1
 pkgdesc="hardware identification databases"
 makedepends=('git')
 replaces=('hwids')
+conflicts=('hwids')
 url=https://github.com/vcrhonek/hwdata
 license=('GPL2')
 arch=('any')
