* update openmpi to 4.1.2-1.1

--- a/openmpi/PKGBUILD
+++ b/openmpi/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=openmpi
 pkgver=4.1.2
-pkgrel=1
+pkgrel=1.1
 pkgdesc='High performance message passing library (MPI)'
 url='https://www.open-mpi.org'
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -37,11 +37,12 @@ build() {
     --libdir=/usr/lib/${pkgname} \
     --enable-builtin-atomics \
     --enable-mpi-cxx \
-    --without-valgrind \
-    --disable-memchecker \
+    --with-valgrind \
+    --enable-memchecker \
     --enable-pretty-print-stacktrace \
     --without-slurm \
     --with-libltdl=/usr  \
+    --with-hwloc=/usr \
     --with-libevent=/usr ${EXTRA_CONFIGURE_FLAGS} \
     FC=/usr/bin/gfortran \
     LDFLAGS="${LDFLAGS} -Wl,-z,noexecstack"
