* update mgard to 0.1.0-2

--- a/mgard/PKGBUILD
+++ b/mgard/PKGBUILD
@@ -5,7 +5,8 @@ pkgname=mgard
 pkgver=0.1.0
 pkgrel=2
 pkgdesc="MultiGrid Adaptive Reduction of Data"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
+arch=(riscv64)
 url="https://github.com/CODARcode/MGARD"
 license=(Apache)
 depends=(glibc zlib zstd)
