* update libgeotiff to 1.6.0-3

--- a/libgeotiff/PKGBUILD
+++ b/libgeotiff/PKGBUILD
@@ -8,7 +8,7 @@ pkgname=libgeotiff
 pkgver=1.6.0
 pkgrel=3
 pkgdesc="A TIFF based interchange format for georeferenced raster imagery"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://github.com/OSGeo/libgeotiff"
 license=('custom')
 depends=('libtiff' 'proj' 'libjpeg-turbo')
@@ -19,7 +19,7 @@ sha256sums=('9311017e5284cffb86f2c7b7a9df1fb5ebcdc61c30468fb2e6bca36e4272ebca')
 build() {
   cd "${srcdir}"/$pkgname-$pkgver
 
-  ./configure --prefix=/usr
+  ./configure --prefix=/usr --build=${CHOST}
   make
 }
 
