* update xf86-video-ati to 1:19.1.0.r9.g5eba006e-2.1

--- a/xorg/xf86-video-ati/PKGBUILD
+++ b/xorg/xf86-video-ati/PKGBUILD
@@ -6,7 +6,7 @@
 pkgname=xf86-video-ati
 _commit=5eba006e4129e8015b822f9e1d2f1e613e252cda
 pkgver=19.1.0.r9.g5eba006e
-pkgrel=2
+pkgrel=2.1
 epoch=1
 pkgdesc="X.org ati video driver"
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -55,7 +55,8 @@ build() {
   export CXXFLAGS=${CXXFLAGS/-fno-plt}
   export LDFLAGS=${LDFLAGS/,-z,now}
 
-  ./configure --prefix=/usr
+  ./configure --prefix=/usr \
+              --enable-glamour
   make
 }
 
