* update polkit to 0.120-3

--- a/polkit/PKGBUILD
+++ b/polkit/PKGBUILD
@@ -1,41 +1,48 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer: Jan de Groot <jgc@archlinux.org>
+# Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
+# Contributor: Jan de Groot <jgc@archlinux.org>
 
 pkgname=polkit
 pkgver=0.120
-pkgrel=2
+pkgrel=3
 pkgdesc="Application development toolkit for controlling system-wide privileges"
 arch=(x86_64 powerpc64le powerpc riscv64)
+arch=(powerpc)
 license=(LGPL)
 url="https://www.freedesktop.org/wiki/Software/polkit/"
 depends=(glib2 pam expat systemd js78)
 makedepends=(meson gtk-doc gobject-introspection git)
-options=(!ccache)
+checkdepends=(python-dbusmock)
 backup=(etc/pam.d/polkit-1)
-_commit=92b910ce2273daf6a76038f6bd764fa6958d4e8e
-source=("git+https://gitlab.freedesktop.org/polkit/polkit.git#commit=$_commit")
-sha256sums=('SKIP')
+_commit=92b910ce2273daf6a76038f6bd764fa6958d4e8e  # tags/0.120
+source=("git+https://gitlab.freedesktop.org/polkit/polkit.git#commit=$_commit"
+        polkit-0.120-meson.patch)
+sha256sums=('SKIP'
+            '9a84b59d38b3f86c70c5fc3a28cbfe8d7a22cf190eb20ff433f7f53f5ff73a9a')
 
 pkgver() {
-  cd $pkgname
+  cd polkit
   git describe --tags | sed 's/-/+/g'
 }
 
+prepare() {
+  cd polkit
+  patch -Np1 -i ${srcdir}/polkit-0.120-meson.patch
+}
+
 build() {
-  CC=gcc CXX=g++ \
-  meson build $pkgname \
-    --prefix=/usr \
+  arch-meson polkit build \
     -D session_tracking=libsystemd-login \
     -D os_type=redhat \
+    -D examples=true \
     -D tests=true \
     -D gtk_doc=true \
-    -D man=true \
-    -D examples=true
+    -D man=true
   meson compile -C build
 }
 
 check() {
-  meson test -C build ||:
+  meson test -C build --print-errorlogs -t 3
 }
 
 package() {
@@ -50,4 +57,4 @@ m polkitd proc
 END
 }
 
-# vim: ts=2 sw=2 et:
+# vim:set sw=2 et:
