* update fcitx to 4.2.9.8-1

--- a/fcitx/PKGBUILD
+++ b/fcitx/PKGBUILD
@@ -6,7 +6,7 @@
 pkgname=fcitx
 pkgdesc="Flexible Context-aware Input Tool with eXtension"
 pkgver=4.2.9.8
-pkgrel=3
+pkgrel=1
 groups=('fcitx-im')
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://fcitx-im.org"
@@ -14,7 +14,7 @@ license=('GPL' 'LGPL')
 provides=('fcitx-gtk2' 'fcitx-gtk3')
 conflicts=('fcitx-gtk2' 'fcitx-gtk3')
 replaces=('fcitx-gtk2' 'fcitx-gtk3')
-depends=('pango' 'libxinerama' 'shared-mime-info'
+depends=('pango' 'libxinerama' 'gtk-update-icon-cache' 'shared-mime-info'
           'hicolor-icon-theme' 'desktop-file-utils' 'libxkbfile'
           'libxfixes' 'dbus' 'icu' 'libxkbcommon')
 optdepends=('enchant: for word predication support'
