* update mongo-c-driver to 1.20.0-1

--- a/mongo-c-driver/PKGBUILD
+++ b/mongo-c-driver/PKGBUILD
@@ -2,10 +2,10 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=mongo-c-driver
-pkgver=1.19.0
+pkgver=1.20.0
 pkgrel=1
 pkgdesc='A client library written in C for MongoDB'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.mongodb.org/display/DOCS/C+Language+Center'
 license=('Apache')
 depends=('libsasl' 'icu' 'snappy' 'zlib' 'zstd')
@@ -14,7 +14,7 @@ provides=('libbson' 'libmongoc')
 conflicts=('libbson' 'libmongoc')
 replaces=('libbson' 'libmongoc')
 source=("https://github.com/mongodb/mongo-c-driver/releases/download/$pkgver/$pkgname-$pkgver.tar.gz")
-sha512sums=('6bb3b199ecbe8cc31a42c50c123d82128ee490083ccc91f3f85fc83bdf96c9cc10666ffdbc4f9bc136d4e6d259915af140cb13bb51ec36b52c1b4433f545bdd2')
+sha512sums=('acaf432d28cf8f507e893c9b0c1561035a73187e03630666703a8cfdc55d731347af8f37ea4a961149be1ebd806c2fd92a752fa443ce46b8aa8d8436c9f1ed15')
 
 prepare() {
   mkdir -p build
@@ -22,6 +22,14 @@ prepare() {
 
 build() {
   cd build
+  
+  case "${CARCH}" in
+    riscv64)
+      export CFLAGS+=' -latomic'
+      export CXXFLAGS+=' -latomic'
+    ;;
+  esac
+
   cmake ../mongo-c-driver-$pkgver \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr \
