* update m17n-lib to 1.8.0-11

--- a/m17n-lib/PKGBUILD
+++ b/m17n-lib/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.8.0
 pkgrel=11
 pkgdesc='Multilingual text processing library (runtimes)'
 url='https://www.nongnu.org/m17n/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL')
 depends=('libxft' 'm17n-db' 'fribidi' 'libthai' 'libxml2' 'gd' 'libotf')
 makedepends=('anthy' 'ispell')
@@ -25,7 +25,8 @@ prepare() {
 
 build() {
   cd ${pkgname}-${pkgver}
-  ./configure --prefix=/usr
+  ./configure --prefix=/usr \
+              --build=${CHOST}
   make
 }
 
