* update spirv-tools to 2021.4-1.1

--- a/spirv-tools/PKGBUILD
+++ b/spirv-tools/PKGBUILD
@@ -11,19 +11,22 @@ license=('custom')
 groups=(vulkan-devel)
 depends=('gcc-libs')
 makedepends=('cmake' 'python' 'git' 'ninja')
-source=("git+https://github.com/KhronosGroup/SPIRV-Tools.git#tag=v${pkgver}"
-        "git+https://github.com/KhronosGroup/SPIRV-Headers.git")
+source=("${pkgname}::git+https://github.com/KhronosGroup/SPIRV-Tools.git#tag=v${pkgver}"
+        "${pkgname}-headers::git+https://github.com/KhronosGroup/SPIRV-Headers.git"
+        "${pkgname}-pr4622.patch::https://patch-diff.githubusercontent.com/raw/KhronosGroup/SPIRV-Tools/pull/4622.patch")
 sha256sums=('SKIP'
-            'SKIP')
+            'SKIP'
+            '39659e39695712cfaf18fffed4f6bbe76ead0514081ecc9384e0b682648dccd1')
 
 prepare() {
-  cd SPIRV-Tools
-
+  cd ${srcdir}/${pkgname}
+  # addresses QTBUG-93101
+  patch -Np1 -i ${srcdir}/${pkgname}-pr4622.patch
   rm -rf build && mkdir build
 }
 
 build() {
-  cd SPIRV-Tools/build
+  cd ${srcdir}/${pkgname}/build
 
   cmake .. \
       -GNinja \
@@ -33,12 +36,12 @@ build() {
       -DSPIRV_WERROR=Off \
       -DBUILD_SHARED_LIBS=ON \
       -DSPIRV_TOOLS_BUILD_STATIC=OFF \
-      -DSPIRV-Headers_SOURCE_DIR="${srcdir}"/SPIRV-Headers
+      -DSPIRV-Headers_SOURCE_DIR="${srcdir}"/${pkgname}-headers
   ninja
 }
 
 package() {
-  cd SPIRV-Tools/build
+  cd ${srcdir}/${pkgname}/build
 
   DESTDIR="${pkgdir}" ninja install
 
