* update hexer-hobu to 1.4.0-7

--- a/hexer-hobu/PKGBUILD
+++ b/hexer-hobu/PKGBUILD
@@ -2,9 +2,9 @@
 # Maintainer: Sven-Hendrik Haase <svenstaro@gmail.com>
 pkgname=hexer-hobu
 pkgver=1.4.0
-pkgrel=6
+pkgrel=7
 pkgdesc="LAS and OGR hexagonal density and boundary surface generation"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://github.com/hobu/hexer"
 license=(LGPL)
 depends=(gdal)
